WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36183
Web Inspector: [REGRESSION in
r56051
] Resources panel is empty after front-end reopening.
https://bugs.webkit.org/show_bug.cgi?id=36183
Summary
Web Inspector: [REGRESSION in r56051] Resources panel is empty after front-en...
Pavel Feldman
Reported
2010-03-16 12:48:55 PDT
Make sure resource tracking is 'on' 1. Go to any site 2. Open inspector, make sure there are resources in in the resources panel 3. Close and reopen inspector Actual: resources panel is empty Expected: it should contain all resources.
Attachments
patch
(9.47 KB, patch)
2010-03-17 02:55 PDT
,
Yury Semikhatsky
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2010-03-17 02:55:26 PDT
Created
attachment 50885
[details]
patch
Pavel Feldman
Comment 2
2010-03-17 03:02:38 PDT
Comment on
attachment 50885
[details]
patch Could you replace all windowVisible with m_frontend checks everywhere?
Yury Semikhatsky
Comment 3
2010-03-17 04:00:31 PDT
(In reply to
comment #2
)
> (From update of
attachment 50885
[details]
) > Could you replace all windowVisible with m_frontend checks everywhere?
Done. M WebCore/ChangeLog M WebCore/WebCore.xcodeproj/project.pbxproj M WebCore/inspector/InspectorController.cpp M WebCore/inspector/InspectorController.h M WebCore/inspector/InspectorResource.cpp Committed
r56104
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug