2010-03-17  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Pavel Feldman.

        Mark inspector resources as changed so that they are reloaded on the next frontend connection.

        Split resetScriptObjects into code specific for page navigation and insepctor frontend disconnection.

        https://bugs.webkit.org/show_bug.cgi?id=36183

        * WebCore.xcodeproj/project.pbxproj: Added InspectorWorkerResource.h to the project file.
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::disconnectFrontend):
        (WebCore::InspectorController::unbindAllResources):
        (WebCore::InspectorController::didCommitLoad):
        * inspector/InspectorController.h:
        * inspector/InspectorResource.cpp:
        (WebCore::InspectorResource::releaseScriptObject):


Canonical link: https://commits.webkit.org/47398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56104 268f45cc-cd09-0410-ab3c-d52691b4dbfc